Add login links and canvas browser icon. increment version number to 1.0 first release

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
 	"name": "Monitor me Jenkins"
-	,"version": "0.2"
+	,"version": "1.0"
 	,"manifest_version": 2
 	,"description": "Jenkins build monitor, a very basic radiator for Jenkins CI server"
 	,"icons": { "16": "lib/i/icon16.png"
@@ -16,6 +16,7 @@
 	,"background":{
 		"scripts": [
 			"lib/js/constants.js"
+			,"lib/js/zepto.js"
 			,"lib/js/underscore.js"
 			,"lib/js/background.js"
 		]
