--- a/manifest.json
+++ b/manifest.json
@@ -1,31 +1,33 @@
 {
-	"name": "Monitor me Jenkins"
-	,"version": "1.10"
-	,"manifest_version": 2
-	,"description": "Jenkins build monitor, a very basic radiator for Jenkins CI server"
-	,"icons": { "16": "lib/i/pie301.png"
-				,"32": "lib/i/pie301.png"
-				,"48": "lib/i/pie301.png"
-				,"128": "lib/i/pie301.png"
-	}
-	,"browser_action": {
-		"default_icon": "lib/i/icon19.png"
-		,"default_title": "Monitor me Jenkins"
-		,"default_popup": "popup.html"
-	}
-	,"background":{
-		"scripts": [
-			"lib/js/constants.js"
-			,"lib/js/zepto.js"
-			,"lib/js/underscore.js"
-			,"lib/js/background.js"
-		]
-	}
-	,"options_page": "options.html"
-	,"permissions": [
-		"tabs"
-		,"http://*/"
-		,"https://*/"
-		,"background"
-	]
+    "name": "Monitor me Jenkins"
+    ,"version": "1.11"
+    ,"manifest_version": 2
+    ,"description": "Jenkins build monitor, a very basic radiator for Jenkins CI server"
+    ,"icons": { "16": "lib/i/pie301.png"
+                ,"32": "lib/i/pie301.png"
+                ,"48": "lib/i/pie301.png"
+                ,"128": "lib/i/pie301.png"
+    }
+    ,"browser_action": {
+        "default_icon": "lib/i/icon19.png"
+        ,"default_title": "Monitor me Jenkins"
+        ,"default_popup": "popup.html"
+    }
+    ,"background":{
+        "scripts": [
+            "lib/js/constants.js"
+            ,"lib/js/vendor/zepto.js"
+            ,"lib/js/vendor/underscore.js"
+            ,"lib/js/vendor/can.custom.js"
+            ,"lib/js/background.js"
+        ]
+    }
+    ,"options_page": "options.html"
+    ,"content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'"
+    ,"permissions": [
+        "tabs"
+        ,"http://*/"
+        ,"https://*/"
+        ,"background"
+    ]
 }
