Make yellow segment in pie display (previously showed as grey). Hide message while refreshing in popup. Add extension version number to browser action title.

--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
     "name": "Monitor me Jenkins"
-    ,"version": "1.15"
+    ,"version": "1.16"
     ,"manifest_version": 2
-    ,"description": "Jenkins build monitor, a very basic radiator for Jenkins CI server"
+    ,"description": "Jenkins build monitor, a basic radiator for Jenkins CI server"
     ,"icons": { "16": "lib/i/pie301.png"
                 ,"32": "lib/i/pie301.png"
                 ,"48": "lib/i/pie301.png"
